# safe-assert

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
safe_assert/: __init__.py
