[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "safe-assert"
version = "0.3.0"
description = "Safe assert for Python that can be used together with optimised mode"
license = "MIT"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/safe-assert"

keywords = [
  "assert",
  "utility",
  "helper",
  "optimized mode"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
nitpick = "^0.27"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"
