[tool.poetry]
name = "safe-assert"
version = "0.5.0"
description = "Safe assert for Python that can be used together with optimised mode"
license = "MIT"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/safe-assert"

keywords = [
  "assert",
  "utility",
  "helper",
  "optimized mode"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/wemake-services"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
mypy = "^1.9"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^1.5"
nitpick = "^0.35"

pytest = "^8.1"
pytest-cov = "^5.0"
pytest-randomly = "^3.12"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
